[workspace]
members = [
    "tokio-postgres-macros"
]

[package]
name = "tokio-postgres-utils"
version = "0.1.0"
edition = "2021"

license = "MIT"
keywords = ["postgresql", "postgres", "sql", "database"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/"
description = "Utilities to work with the `tokio-postgres` crate"


[dependencies]
tokio-postgres-macros = { path = "./tokio-postgres-macros" }