[package]
name = "tokio-postgres-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

license = "MIT"
keywords = ["postgresql", "postgres", "sql", "database"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/tokio-postgres-utils"
description = "Utilities to work with the `tokio-postgres` crate"

[dependencies]
syn = "2"
quote2 = "0.7"