[package]
name = "tokio-postgres-macros"
version = "0.1.1"
edition = "2021"

license = "MIT"
keywords = ["postgresql", "postgres", "sql", "database"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/tokio-postgres-utils"
description = "Utilities to work with the `tokio-postgres` crate"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote2 = "0.7"